[project]
name = "minecraft-maven-bridge"
description = "A bridge application that exposes PaperMC's Hangar as a Maven repository."
version = "1.0.0"
authors = [{name = "Prodrivers", email = "sources@prodrivers.fr"}]

readme = "README.md"
license = {file = "LICENSE"}

requires-python = ">= 3.11"
dependencies = [
  "fastapi==0.115.5",
  "fastapi-cache2==0.2.2",
  "fastapi-cache2[redis]==0.2.2",
  "fastapi-xml==1.1.1",
  "httpx==0.28.0",
  "pydantic-settings==2.6.1",
  "python-dotenv==1.0.1",
  "redis==4.6.0"
]

[project.optional-dependencies]
dev = [
  "uvicorn"
]

[project.scripts]
app = "app:main"

[tool.setuptools]
packages = ["app"]
